# correcao_scripts

./: app.py  pyproject.toml  railway.json  requirements.txt
templates/: index.html
templates/enunciados/em_aula/aula1/: calculadora_boas_vindas.html  mensagem.html  microdesafio_1.html  microdesafio_2.html
templates/enunciados/para_casa/aula1/: desafio_criativo.html  erro_aspas_maiusculas_parenteses.html  mensagem_boas_vindas.html  metros_em_km.html  operadores_sinais.html  print_com_soma.html  segundos_em_2h30_e_minutos_filme.html  soma_media_decimais.html  tempo_de_tela.html  variavel_mensagem.html
testes/aula1/: soma.py  subtracao.py
testes/aula2/: maior_numero.py  par_ou_impar.py
testes/em_aula/aula1/: calculadora_boas_vindas.py  mensagem.py  microdesafio_1.py  microdesafio_2.py
testes/para_casa/aula1/: desafio_criativo.py  erro_aspas_maiusculas_parenteses.py  mensagem_boas_vindas.py  metros_em_km.py  operadores_sinais.py  print_com_soma.py  segundos_em_2h30_e_minutos_filme.py  soma_media_decimais.py  tempo_de_tela.py  variavel_mensagem.py
