[tool.poetry]
name = "correcao-scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Everson Otoni",email = "everson.ott@gmail.com"}
]
requires-python = ">=3.13"

[tool.poetry.dependencies]
python = ">=3.13"
flask = ">=3.1.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

